Added other two apps, still some problems with getting all apps displayed correctly

--- a/portal/applications.config.json
+++ b/portal/applications.config.json
@@ -11,5 +11,18 @@
         "baseHref": "/featured",
         "matchRoute": "/featured/",
         "isDefaultApp": true
+    },
+    {
+        "name": "concerts",
+        "selector": "concerts-root",
+        "baseHref": "/concerts",
+        "matchRoute": "/**"
+    },
+    {
+        "name": "footer",
+        "selector": "footer-root",
+        "baseHref": "/footer",
+        "matchRoute": "/**"
     }
+
 ]
